--- a/code.html
+++ b/code.html
@@ -164,7 +164,7 @@ body {
         <div class="container">       
             <article class="card">
                 <div class='background'>
-                    <img src="1.jpg" alt="profile">
+                    <img src="1.jpg" alt="profile" style="clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);">
                 </div>
                 <div class='content'>
                     <h2>Zack  &#127468;&#127463;</h2>
