--- a/weather.html
+++ b/weather.html
@@ -34,7 +34,7 @@
         }
 
         .conatiner {
-            background: linear-gradient(0deg, #00fe3fc6, #000000);
+            background: linear-gradient(0deg, #00fe3fc6, #1f1d1d);
 
             width: 500px;
             height: 400px;
@@ -104,7 +104,7 @@
         }
 
         .col i {
-            font-size: 25px;
+            font-size: 29px;
             color: rgb(255, 255, 255);
 
 
@@ -112,13 +112,16 @@
 
 
         .col h5 {
-            font-size: 18px;
-            color: white;
+            font-size: 20px;
+            color: rgb(0, 0, 0);
+            font-weight: 900;
 
         }
 
         .col p {
             font-size: 17px;
+            font-weight: 900;
+
             color: white;
         }
     </style>
@@ -134,9 +137,9 @@
 
 
         <div class="body" id="body_data">
-            <h2 id="temp">22°C
+            <h2 id="temp">°C
             </h2>
-            <h3 id="city">New York</h3>
+            <h3 id="city"></h3>
 
         </div>
 
@@ -146,7 +149,7 @@
                 <i class="fa-solid fa-droplet"></i>
                 <div>
                     <h5 id="humidity"></h5>
-                    <p>humidity</p>
+                    <p>Humidity</p>
                 </div>
             </div>
             <div class="col">
@@ -154,7 +157,7 @@
                 <i class="fa-solid fa-wind"></i>
                 <div>
                     <h5 id="windspeed"></h5>
-                    <p>wind speed</p>
+                    <p>Wind_speed</p>
                 </div>
 
             </div>
@@ -169,11 +172,10 @@
                 </div>
             </div>
             <div class="col">
-
-                <i class="fa-solid fa-cloud"></i>
+                <i class="fa-solid fa-socks"></i>                
                 <div>
                     <h5 id="feels"></h5>
-                    <p>feels_like
+                    <p>Feels_like
                     </p>
                 </div>
 
